# diplomka

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  jcap_assignment.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: thesis.agent.md
.github/workflows/: pre-commit.yml  pytest.yml
analyses/: election_2025.ipynb  feature_matrix.ipynb  geojson.ipynb  mapy_com_api.ipynb  migration.ipynb  municipal_explore.ipynb  research.ipynb  target_scrape.ipynb  unemployment.ipynb
analyses/features/: area.ipynb  births.ipynb  election_2021.ipynb  election_2025.ipynb  migration.ipynb  osm.ipynb  population.ipynb  road_accidents.ipynb  unemployment.ipynb
configs/: example.env  features.yaml  training.yaml  training_age.yaml
data/: bundeslaender_simplify200.geojson  gemeinden_simplify200.geojson  georef-germany-gemeinde.csv
data/raw/: 31122024_Auszug_GV.xlsx  municipalities_2022.csv  population.csv  unemployment.csv
data/raw/features/: 12411-02-03-5-population.csv  12612-91-01-5-births.csv  12711-91-01-5-migration.csv  13211-01-03-5-unemployment-2020.csv  13211-01-03-5-unemployment-2025.csv  13211-01-03-5-unemployment.csv  33111-01-03-5-land-area.csv  46241-01-04-5-road-accidents.csv
data/raw/osm/: atms_full.geojson  hospitals.geojson  tourism.geojson  universities.geojson
notebooks/: election_2025.ipynb  research.ipynb
reports/: training_report.qmd
src/geoscore_de/: cli.py  config.py  filtering.py  mlflow.py  mlflow_wrapper.py
src/geoscore_de/address/: base.py  mapy_com.py  models.py
src/geoscore_de/app/: __init__.py  __main__.py  config.py  main.py  middleware.py
src/geoscore_de/data_flow/: config.py  geo.py  matrix_builder.py  migration.py  municipality.py  population.py  unemployment.py
src/geoscore_de/modelling/: config.py  data_filtering.py  models.py  train.py  training_result.py
tests/: test_cli.py  test_mlflow.py
tests/address/: test_base_address_retriever.py  test_mapy_com.py
tests/app/: test_config.py  test_main.py
tests/data_flow/: test_geo.py
tests/data_flow/feature_engineering/: test_base_feature_engineering.py  test_binning_feature_engineering.py  test_delta_feature_engineering.py  test_homogeneity.py  test_homogenity.py  test_kbins_binning.py  test_sum_feature_engineering.py
tests/data_flow/features/: conftest.py  test_births.py  test_config.py  test_election_21.py  test_election_25.py  test_feature_base.py  test_feature_config.py  test_matrix_builder.py  test_municipality.py  (+3 more)
tests/modelling/: test_data_filtering.py  test_models.py  test_train.py  test_train_split.py  test_training_result.py
(+42 files in other folders)
