[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geoscore-de"
description = "GeoScore Germany"
version = "0.1"
dependencies = [
    "plotnine",
    "scipy",
    "numpy",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "click",
    "nbconvert",
    "ruff",
    "pre-commit",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.lint.pydocstyle]
# set docstring format to google
convention = "google"

[tool.ruff.lint.isort]
known-local-folder = ["PROJECT_NAME"]
