[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[project]
name = "geoscore-de"
description = "GeoScore Germany"
version = "0.1"
requires-python = ">= 3.10"
dependencies = [
    "plotnine",
    "scipy",
    "numpy",
    "pandas",
    "geopandas",
    "requests",
    "typer",
    "pydantic",
    # app
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    {include-group = "analysis"},
    {include-group = "precommit"},
    {include-group = "test"},
]
analysis = [
    "ipykernel",
]
precommit = [
    "pre-commit",
    "ruff",
    "nbstripout",
]
test = [
    "pytest",
    "httpx",
]

[tool.ruff]
line-length = 120

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
